[gd_scene load_steps=7 format=3 uid="uid://bcso2iywa5mbr"]

[ext_resource type="Script" path="res://oscilloscope/oscilloscope_scene.gd" id="1_7v8s3"]
[ext_resource type="PackedScene" uid="uid://xwjc4o5q6885" path="res://oscilloscope/oscillo_screen.tscn" id="1_ulers"]
[ext_resource type="PackedScene" uid="uid://cysuqq7mfjitr" path="res://audio_manager/smooth_loop.tscn" id="3_n1h8k"]

[sub_resource type="Animation" id="Animation_6udea"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../emit_button:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_12kr5"]
resource_name = "flicker"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../emit_button:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uodwl"]
_data = {
"RESET": SubResource("Animation_6udea"),
"flicker": SubResource("Animation_12kr5")
}

[node name="oscilloscope_scene" type="ReferenceRect"]
offset_right = 1600.0
offset_bottom = 920.0
script = ExtResource("1_7v8s3")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="emit_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.65
anchor_top = 0.815
anchor_right = 0.967
anchor_bottom = 0.948
offset_left = -3.05176e-05
offset_top = -0.0500183
offset_right = -0.160034
offset_bottom = 0.039978
theme_override_font_sizes/font_size = 64
disabled = true
text = "EMIT"

[node name="AnimationPlayer" type="AnimationPlayer" parent="emit_button"]
root_node = NodePath("../../ProgressBar")
libraries = {
"": SubResource("AnimationLibrary_uodwl")
}

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.033
anchor_top = 0.815
anchor_right = 0.617
anchor_bottom = 0.948
offset_left = 0.16
offset_top = -0.0500183
offset_right = -0.160034
offset_bottom = 0.039978
theme_override_font_sizes/font_size = 64

[node name="OscilloScreen" parent="." instance=ExtResource("1_ulers")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.417
anchor_top = 0.061
anchor_right = 0.97
anchor_bottom = 0.739
offset_left = -0.800003
offset_top = -2.03
offset_right = 0.0
offset_bottom = 0.0299988
grow_vertical = 2

[node name="similarity_label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.042
anchor_top = 0.726
anchor_right = 0.4
anchor_bottom = 0.822
offset_left = -0.160002
offset_top = -0.0200043
offset_right = 4.0
offset_bottom = 0.0599976
theme_override_font_sizes/font_size = 48
text = "SIMILARITY"

[node name="alpha" type="Label" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 45.0
offset_right = 128.0
offset_bottom = 161.0
theme_override_font_sizes/font_size = 64
text = "a
"

[node name="mu" type="Label" parent="."]
layout_mode = 0
offset_left = 220.0
offset_top = 45.0
offset_right = 288.0
offset_bottom = 161.0
theme_override_font_sizes/font_size = 64
text = "Y"

[node name="omega" type="Label" parent="."]
layout_mode = 0
offset_left = 380.0
offset_top = 45.0
offset_right = 448.0
offset_bottom = 161.0
theme_override_font_sizes/font_size = 64
text = "W"

[node name="phi" type="Label" parent="."]
layout_mode = 0
offset_left = 540.0
offset_top = 45.0
offset_right = 608.0
offset_bottom = 161.0
theme_override_font_sizes/font_size = 64
text = "f"

[node name="ampl_slider" type="VSlider" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.033
anchor_top = 0.178
anchor_right = 0.083
anchor_bottom = 0.696
offset_left = 17.2
offset_top = -3.76001
offset_right = -46.8
offset_bottom = -320.32
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
ticks_on_borders = true

[node name="phase_slider" type="VSlider" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.333
anchor_top = 0.176
anchor_right = 0.383
anchor_bottom = 0.696
offset_left = 17.2
offset_top = -1.92
offset_right = -46.8
offset_bottom = -320.32
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)

[node name="mean_slider" type="VSlider" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.133
anchor_top = 0.176
anchor_right = 0.183
anchor_bottom = 0.696
offset_left = 17.2
offset_top = -1.92
offset_right = -46.8
offset_bottom = -320.32
scale = Vector2(3, 3)

[node name="period_slider" type="VSlider" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.233
anchor_top = 0.176
anchor_right = 0.283
anchor_bottom = 0.696
offset_left = 17.2
offset_top = -1.92
offset_right = -46.8
offset_bottom = -320.32
scale = Vector2(3, 3)

[node name="crowd_loop" parent="." instance=ExtResource("3_n1h8k")]
effective_bus = "oscillo_crowd"
volume_max = -10.0

[node name="white_noise_loop" parent="." instance=ExtResource("3_n1h8k")]
effective_bus = "oscillo_white_noise"
